--- a/aou_omop_dbt/dbt_project.yml
+++ b/aou_omop_dbt/dbt_project.yml
@@ -33,8 +33,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 models:
   aou_omop_dbt:
-    # Config indicated by + and applies to all files under models/example/
-    # example:
-      +materialized: view
-
+    2b_HealthSystem:
+      app:
+        +materialized: table
+      pull:
+        +materialized: view
   
