--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,12 @@
+# packages:
+#   - package: fishtown-analytics/dbt_utils
+#     version: 0.6.3
+packages:  
+  - package: dbt-labs/dbt_utils    
+    version: 0.8.0
+
+  - package: calogica/dbt_expectations
+    version: 0.5.1
+
 packages:
-  - package: fishtown-analytics/dbt_utils
-    version: 0.6.3
+    - local: '../libs/dbt-utils'
