--- a/packages.yml
+++ b/packages.yml
@@ -1,12 +1,13 @@
 # packages:
 #   - package: fishtown-analytics/dbt_utils
 #     version: 0.6.3
-packages:  
-  - package: dbt-labs/dbt_utils    
-    version: 0.8.0
-
-  - package: calogica/dbt_expectations
-    version: 0.5.1
+#packages:  
+#  - package: dbt-labs/dbt_utils    
+#    version: 0.8.0
+#
+#  - package: calogica/dbt_expectations
+#    version: 0.5.1
 
 packages:
-    - local: '../libs/dbt-utils'
+    - local: './libs/dbt-utils'
+    - local: './libs/dbt-expectations'
