--- a/models/2d_Condition_occurrence/app/2d_Condition_occurrence_app.yml
+++ b/models/2d_Condition_occurrence/app/2d_Condition_occurrence_app.yml
@@ -60,7 +60,13 @@ models:
           - relationships:
               to: ref('VISIT_OCCURRENCE')
               field: VISIT_OCCURRENCE_ID          
-              
+   
+      - name: VISIT_DETAIL_ID
+        tests:
+          - not_null:
+              config:
+                severity: warn
+                                       
       - name: CONDITION_SOURCE_CONCEPT_ID
         tests:
           - relationships:
