--- a/models/2h_Observation/app/2h_Observation_app.yml
+++ b/models/2h_Observation/app/2h_Observation_app.yml
@@ -71,6 +71,15 @@ models:
               to: ref('PROVIDER')
               field: PROVIDER_ID
 
+      - name: VISIT_OCCURRENCE_ID
+        tests:
+          - not_null:
+              config:
+                severity: warn
+          - relationships:
+              to: ref('VISIT_OCCURRENCE')
+              field: VISIT_OCCURRENCE_ID    
+              
       - name: VISIT_DETAIL_ID
         description: Not Applicable - Value:0 
         tests:
