Fixing YAML issue

--- a/models/2h_Observation/app/2h_Observation_app.yml
+++ b/models/2h_Observation/app/2h_Observation_app.yml
@@ -73,7 +73,12 @@ models:
 
       - name: VISIT_OCCURRENCE_ID
         tests:
-          - not_null
+          - not_null:
+              config:
+                severity: warn
+          - relationships:
+              to: ref('VISIT_OCCURRENCE')
+              field: VISIT_OCCURRENCE_ID
 
       - name: VISIT_DETAIL_ID
         description: Not Applicable - Value:0 
