update various production errors

--- a/models/2j_Device_exposure/app/2j_Device_exposure_app.yml
+++ b/models/2j_Device_exposure/app/2j_Device_exposure_app.yml
@@ -47,7 +47,9 @@ models:
           - relationships:
               to: ref('PROVIDER')
               field: PROVIDER_ID
-
+              config:
+                severity: warn
+                
       - name: VISIT_OCCURRENCE_ID
         tests:
           - not_null:
