Direct all QA to OMOP_QA schema

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -59,7 +59,10 @@ models:
         +materialized: view
       pull:
         +materialized: view
-
+    5_Curation:
+      +materialized: view
+      +schema: OMOP_QA
+      
 # Loads the Participants List
 on-run-start: "{{ import_participants() }}"  
 
