--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -43,6 +43,7 @@ snapshot-paths: ["snapshots"]
 target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
+  - "logs"
 #  - "dbt_packages"
 
 
