--- a/models/1c_provider/app/1c_provider_app.yml
+++ b/models/1c_provider/app/1c_provider_app.yml
@@ -14,6 +14,7 @@ models:
           - relationships:
               to: ref('CARE_SITE')
               field: CARE_SITE_ID 
+              severity: warn
 
       - name: GENDER_CONCEPT_ID
         tests:
