added explicit data types

--- a/models/1c_provider/app/1c_provider_app.yml
+++ b/models/1c_provider/app/1c_provider_app.yml
@@ -6,7 +6,8 @@ models:
     columns: 
       - name: PROVIDER_ID
         tests:
-          - unique
+          - unique:
+              severity: warn          
           - not_null
 
       - name: CARE_SITE_ID
