--- a/models/2c_Visit_occurrence__visit_detail/app/2c_Visit_occurrence__visit_detail_app.yml
+++ b/models/2c_Visit_occurrence__visit_detail/app/2c_Visit_occurrence__visit_detail_app.yml
@@ -107,7 +107,7 @@ models:
               to: source('CDM','CONCEPT')
               field: CONCEPT_ID   
 
-      - name: ATTENDING_PROV
+      - name: PROVIDER_ID
         tests:
           - not_null:
               config:
